--- a/app/views/tmpl/viewinterface.html
+++ b/app/views/tmpl/viewinterface.html
@@ -442,7 +442,7 @@ OBX|3|CE|OETRNSP3^Transport Info||BIV^Bed with IV
 						</div>
 						</div>
                         <!-- /tile -->
-<section class="tile" fullscreen="isFullscreen02">
+<section class="tile" fullscreen="isFullscreen02" ng-show="recentTestsId">
                           <!-- tile body -->
                           <div class="tile-body p-0">
                            <div class="tile-header dvd dvd-btm">
