--- a/app/views/tmpl/interfacelist.html
+++ b/app/views/tmpl/interfacelist.html
@@ -44,7 +44,7 @@
                                      <th> Last Updated </th>
                                      
                                       <th><center>Environment</center></th>
-                                      <th> By </th>
+                                      <th> Created By </th>
                                     </tr>
                                    <!--  <tr  >
                                       <td ><a  ui-sref="app.projectbuild"><font color="#616f77"><span class="tab">CLA_CLIENTMISC_ORM</span></font></a></td>
