--- a/app/views/tmpl/interfacelist.html
+++ b/app/views/tmpl/interfacelist.html
@@ -43,11 +43,7 @@
                                       <th> Created Date </th>
                                      <th> Last Updated </th>
                                      
-<<<<<<< HEAD
                                       <th><center>Environment</center></th>
-=======
-                                      <th>Environment</th>
->>>>>>> 20eb1527f46a849d797b877cdb0016a89a765a86
                                       <th> Created By </th>
                                     </tr>
                                    <!--  <tr  >
@@ -86,7 +82,7 @@
 										<td  ng-click="viewflow(x.interface_name)"><font color="#616f77"><span class="tab"><a style="cursor:default">{{x.interface_name}}</a></span></font></td>
 										<td>{{x.createdDate || ''}} - {{x.createdtime || ''}} </td>
 										<td>{{x.updatedDate || ''}} - {{x.updatedTime || ''}} </td>
-										<td>{{x.Environment  | uppercase}}</td>
+										<td><center>{{x.Environment | uppercase}}</center></td>
 										<td>{{x.By}}</td>
                                     </tr>
 
