updated the global parameters in cofig page
updated the global parameters in cofig page

--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -24,11 +24,11 @@ text-decoration:none !important;
           <!--</ul>-->
 		</li>
 	
-		<li ui-sref-active="active"><a ui-sref=""><fa name="book"></fa> Library</a>
+		<li ui-sref-active="active"><a ui-sref="app.libraryList"><fa name="book"></fa> Library</a>
 		  <!--<ul>
 			<li ui-sref-active="active"><a ui-sref="app.addLibraryProperties"><fa name="caret-right"></fa>Library properties</a></li>
 			</ul>-->
-			<ul>
+			<!-- <ul>
 			<li ui-sref-active="active"><a ui-sref="app.libraryList"><fa name="caret-right"></fa>Library Listing</a>
 			<li ui-sref-active="active"><a ui-sref="app.viewlibrary1"><fa name="caret-right"></fa>View Library</a>
           <!-- <li ui-sref-active="active"><a ui-sref="app.addlibrary"><fa name="caret-right"></fa>Create New</a></li>
@@ -38,10 +38,10 @@ text-decoration:none !important;
 
            <li ui-sref-active="active"><a ui-sref="app.viewlibraryjob"><fa name="caret-right"></fa>View Job</a></li>
 		   -->
-		  <!-- <li ui-sref-active="active"><a ui-sref="app.addLibraryProperties"><fa name="caret-right"></fa>Library properties</a></li>-->
+		  <!-- <li ui-sref-active="active"><a ui-sref="app.addLibraryProperties"><fa name="caret-right"></fa>Library properties</a></li>
                 
 
-         </ul>
+         </ul> -->
 		</li>
 		
 		<li ui-sref-active="active"><a ui-sref="app.configurationsPage"><fa name="gear"></fa> Configurations</a>
