--- a/app/views/tmpl/config.html
+++ b/app/views/tmpl/config.html
@@ -135,6 +135,28 @@ border: 3px solid #22beef !important;
                                         </div>
 				  </div>
 				 </div>
+				 <div class="row">
+                 <div class="col-sm-6">
+                  <div class="form-group">
+                                            <label for="exampleInputEmail1">Java Utility SVN Path</label>
+                                            <input type="text" placeholder="JavaUtilitySVNPath"  name="JavaUtilitySVNPath" class="form-control underline-input" ng-model="JavaUtilitySVNPath" required>
+                                        </div>
+                 </div>
+                  <div class="col-sm-6">
+                   <div class="form-group">
+                                            <label for="exampleInputEmail1">SVN Library Root Path</label>
+                                           <input type="text" placeholder="SVNLibraryRootPath"  name="SVNLibraryRootPath" class="form-control underline-input" ng-model="SVNLibraryRootPath" required>
+                                        </div>
+                  </div>
+                 </div>
+                 <div class="row">
+                 <div class="col-sm-6">
+                  <div class="form-group">
+                                            <label for="exampleInputEmail1">WSDL SVN Path</label>
+                                            <input type="text" placeholder="WSDLSVNPath"  name="WSDLSVNPath" class="form-control underline-input" ng-model="WSDLSVNPath" required>
+                                        </div>
+                 </div>
+                 </div>
 				  <div class="row">
 				 <div class="col-sm-6">
 				<!--   <div class="form-group">
