Minor UI changes
Minor UI changes

--- a/app/views/tmpl/addinterface.html
+++ b/app/views/tmpl/addinterface.html
@@ -71,7 +71,7 @@ border: 3px solid #22beef !important;
           <a href="index.html"><i class="fa fa-home"></i> mDash</a>
         </li>
         <li>
-          <a href="#">Interface</a>
+          <a ng-click="interfaceList()">Interface</a>
         </li>
         <li>
           <a href="">Create New</a>
@@ -80,7 +80,7 @@ border: 3px solid #22beef !important;
     </div>
   </div>
   
-   <div ng-controller="AddInterface">
+   <div>
   <div class="row">
     <!-- col -->
     <div class="col-md-12">
